--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 ¡Septiembre Mágico en Pixel Creativo!
             </h1>
             <p class="mt-4 text-xl md:text-2xl font-medium text-purple-200">
-                La forma más simple y poderosa de potenciar tu marca.
+                La forma más simple y poderosa de potenciar tu emprendimiento.
             </p>
         </div>
     </div>
@@ -72,7 +72,9 @@
                 <!-- Tarjeta Reel -->
                 <div class="card-bg-light rounded-xl shadow-xl p-6 md:p-8 transform transition-transform hover:scale-105">
                     <h3 class="text-2xl font-bold text-gray-900">Reel de Narrativa Visual (15s)</h3>
-                    <p class="mt-2 text-gray-600">Storytelling en video para captar la atención de tu audiencia.</p>
+                    <p class="mt-2 text-gray-600">
+                        Storytelling (contamos tu historia con ideas) en video para captar la atención de tu audiencia.
+                    </p>
                     <div class="mt-4">
                         <span class="text-3xl font-extrabold text-purple-700">$10.000 ARS</span>
                     </div>
@@ -80,7 +82,9 @@
                 <!-- Tarjeta Carrusel -->
                 <div class="card-bg-light rounded-xl shadow-xl p-6 md:p-8 transform transition-transform hover:scale-105">
                     <h3 class="text-2xl font-bold text-gray-900">Carrusel (hasta 5 piezas)</h3>
-                    <p class="mt-2 text-gray-600">Una serie de imágenes para educar y generar valor en tu audiencia.</p>
+                    <p class="mt-2 text-gray-600">
+                        Una serie de imágenes para informar, generar entendimiento (de horarios, plazos, etc) y valor en tu audiencia.
+                    </p>
                     <div class="mt-4">
                         <span class="text-3xl font-extrabold text-purple-700">$20.000 ARS</span>
                     </div>
@@ -100,10 +104,18 @@
                     Pack Digital Mensual
                 </h3>
                 <p class="mt-2 text-lg text-gray-600 max-w-2xl mx-auto">
-                    Tu empujón inicial para una presencia profesional. Recibe 3 flyers listos para publicar.
+                    Tu empujón inicial para una presencia profesional. Recibe 3 piezas listas para publicar.
                 </p>
+                <div class="mt-4 text-sm text-gray-500 max-w-2xl mx-auto">
+                    Puedes elegir entre:
+                    <ul class="list-disc list-inside mt-2">
+                        <li>3 flyers estáticos individuales.</li>
+                        <li>1 carrusel (5 piezas) y 1 reel corto.</li>
+                        <li>2 flyers y 1 carrusel.</li>
+                    </ul>
+                </div>
                 <div class="mt-6 flex flex-col items-center">
-                    <span class="text-4xl md:text-5xl font-extrabold text-purple-700">$18.000 ARS</span>
+                    <span class="text-4xl md:text-5xl font-extrabold text-purple-700">$15.000 ARS</span>
                     <a href="https://wa.me/5492617484266" target="_blank" class="mt-6 bg-purple-600 text-white font-semibold py-3 px-8 rounded-full shadow-lg hover:bg-purple-700 transition-colors duration-300">
                         ¡Adquirir la Promo!
                     </a>
@@ -122,40 +134,31 @@
                 Descubre el plan que mejor se adapta a tu estrategia y presupuesto.
             </p>
             <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-                <!-- Tarjeta Paquete BÁSICO -->
+                <!-- Tarjeta Paquete BÁSICO (sin precio) -->
                 <div class="card-bg-light rounded-xl shadow-xl p-6 md:p-8 flex flex-col items-center">
                     <span class="text-5xl mb-4">🌟</span>
                     <h3 class="text-2xl font-bold text-gray-900">Paquete BÁSICO</h3>
                     <p class="mt-2 text-center text-gray-600">
-                        Te damos el mapa para que sepas cuándo y cómo usar tus diseños. Incluye una Hoja de Ruta estratégica.
+                        Aquí no solo te entregamos diseños, sino que te damos el mapa para que sepas cuándo y cómo usarlos. Con este plan recibes tu Hoja de Ruta con sugerencias para una estrategia de publicación efectiva.
                     </p>
-                    <div class="mt-auto pt-4">
-                        <span class="text-3xl font-extrabold text-purple-700">$70.000 ARS</span>
-                    </div>
                 </div>
 
-                <!-- Tarjeta Paquete AVANZADO -->
+                <!-- Tarjeta Paquete AVANZADO (sin precio) -->
                 <div class="card-bg-light rounded-xl shadow-xl p-6 md:p-8 flex flex-col items-center">
                     <span class="text-5xl mb-4">🚀</span>
                     <h3 class="text-2xl font-bold text-gray-900">Paquete AVANZADO</h3>
                     <p class="mt-2 text-center text-gray-600">
-                        Tu plan para escalar tu impacto. Con más piezas y una Hoja de Ruta detallada para maximizar tu alcance.
+                        Este es tu plan para escalar. No solo tendrás más piezas, sino que te entregaremos una Hoja de Ruta detallada que te guiará paso a paso para maximizar tu alcance. Te sentirás acompañado en cada decisión.
                     </p>
-                    <div class="mt-auto pt-4">
-                        <span class="text-3xl font-extrabold text-purple-700">$140.000 ARS</span>
-                    </div>
                 </div>
 
-                <!-- Tarjeta Paquete PREMIUM -->
+                <!-- Tarjeta Paquete PREMIUM (sin precio) -->
                 <div class="card-bg-light rounded-xl shadow-xl p-6 md:p-8 flex flex-col items-center">
                     <span class="text-5xl mb-4">👑</span>
                     <h3 class="text-2xl font-bold text-gray-900">Paquete PREMIUM</h3>
                     <p class="mt-2 text-center text-gray-600">
-                        La experiencia definitiva. Nos encargamos del diseño, publicación y gestión diaria.
+                        La experiencia definitiva. Nos encargamos de todo. Desde el diseño hasta la publicación y la gestión diaria de tus redes. Tu Hoja de Ruta se convierte en nuestro manual de operaciones, garantizando una consistencia total para tu marca.
                     </p>
-                    <div class="mt-auto pt-4">
-                        <span class="text-3xl font-extrabold text-purple-700">$175.000 ARS</span>
-                    </div>
                 </div>
             </div>
         </div>
@@ -204,10 +207,88 @@
         </div>
     </section>
 
+    <!-- Sección de agradecimiento y motivación -->
+    <div class="bg-gray-800 text-white py-12 px-4 md:px-8 text-center">
+        <p class="text-lg md:text-xl italic font-light mb-4 max-w-3xl mx-auto">
+            "Cada paso es tu acción, los resultados no dependen del tiempo sino del avance de las decisiones que tomes..."
+        </p>
+        <p class="font-bold mb-4">― El Staff de Pixel Creativo.</p>
+        <p class="text-lg md:text-xl text-gray-300">
+            Agradecemos sinceramente que hayas explorado nuestra oferta. Te deseamos un camino lleno de éxitos y crecimiento para tu emprendimiento.
+        </p>
+    </div>
+
     <!-- Pie de página -->
-    <footer class="bg-gray-900 text-gray-400 py-6 text-center">
+    <footer class="bg-gray-900 text-gray-400 py-6 px-4 md:px-8 text-center text-sm">
         <p>&copy; 2025 Pixel Creativo. Todos los derechos reservados.</p>
+        <p class="mt-1">Desarrollado por: e-Studio ID345.</p>
+        <div class="mt-4">
+            <p id="visit-counter" class="text-xs text-gray-500"></p>
+        </div>
     </footer>
 
+    <!-- Scripts de Firebase -->
+    <script type="module">
+        // Importa las librerías necesarias de Firebase
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+        import { getFirestore, doc, onSnapshot, setDoc, increment } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { getAuth, signInAnonymously, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { setLogLevel } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        
+        // Define las variables globales proporcionadas por el entorno
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+        const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
+        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+
+        // Activa el modo de depuración de Firebase
+        setLogLevel('debug');
+
+        window.onload = async function() {
+            try {
+                // Inicializa la aplicación de Firebase
+                const app = initializeApp(firebaseConfig);
+                const db = getFirestore(app);
+                const auth = getAuth(app);
+
+                // Autentica al usuario usando el token provisto o de forma anónima
+                if (initialAuthToken) {
+                    await signInWithCustomToken(auth, initialAuthToken);
+                } else {
+                    await signInAnonymously(auth);
+                }
+
+                const userId = auth.currentUser?.uid || crypto.randomUUID();
+                
+                // Referencia al documento para el contador de visitas
+                const statsDocRef = doc(db, `artifacts/${appId}/public/data/site_stats`, 'visit_counter');
+
+                // Escucha los cambios en tiempo real del documento
+                onSnapshot(statsDocRef, (docSnap) => {
+                    const counterElement = document.getElementById('visit-counter');
+                    if (counterElement) {
+                        if (docSnap.exists()) {
+                            // Si el documento existe, muestra el conteo
+                            const data = docSnap.data();
+                            counterElement.textContent = `Visitas: ${data.count}`;
+                        } else {
+                            // Si el documento no existe, lo crea con un conteo de 1
+                            counterElement.textContent = 'Visitas: 1';
+                            // Intenta crear el documento solo una vez para evitar race conditions
+                            // Se usa el método setDoc con merge: true para evitar sobrescribir
+                            setDoc(statsDocRef, { count: 1 }, { merge: true })
+                                .then(() => console.log("Contador de visitas inicializado."))
+                                .catch(error => console.error("Error al inicializar el contador:", error));
+                        }
+                    }
+                });
+
+                // Actualiza el contador de visitas cada vez que se carga la página
+                await setDoc(statsDocRef, { count: increment(1) }, { merge: true });
+
+            } catch (error) {
+                console.error("Error al inicializar la aplicación o el contador de visitas:", error);
+            }
+        };
+    </script>
 </body>
 </html>
