--- a/index.html
+++ b/index.html
@@ -108,26 +108,31 @@
         </div>
     </section>
 
-    <!-- Sección de la Promo de Septiembre -->
+    <!-- Sección de la Promo de Septiembre (Actualizada) -->
     <section class="bg-gray-200 py-16 px-4 md:px-8">
         <div class="max-w-7xl mx-auto text-center">
             <div class="card-bg-light rounded-3xl shadow-glow-purple p-8 md:p-12">
                 <h2 class="text-4xl md:text-5xl font-extrabold text-purple-700 animate-pulse-once">
-                    ✨ Promo Septiembre ✨
+                    Pack Digital Único
                 </h2>
                 <h3 class="mt-4 text-2xl font-semibold text-gray-900">
-                    Pack Digital Mensual
-                </h3>
-                <p class="mt-2 text-lg text-gray-600 max-w-2xl mx-auto">
                     Tu empujón inicial para una presencia profesional. Recibí 3 piezas listas para publicar.
-                </p>
+                </h3>
                 <p class="mt-4 font-bold text-gray-700">¡DESCUENTAZO!</p>
-                <div class="mt-4 text-sm text-gray-500 max-w-2xl mx-auto">
-                    Puedes elegir entre:
-                    <ul class="list-disc list-inside mt-2">
-                        <li>3 flyers estáticos individuales.</li>
-                        <li>1 carrusel (3 piezas) y 1 reel corto (5 piezas).</li>
-                        <li>2 flyers y 1 carrusel (de 6 piezas).</li>
+                <p class="mt-2 text-lg text-gray-600 max-w-2xl mx-auto">
+                    3 flyers estáticos individuales para contar sobre tu emprendimiento, ideas o lo que necesites publicar en tus redes sociales.
+                </p>
+                <button class="mt-6 flex items-center justify-center mx-auto text-purple-600 font-semibold hover:text-purple-700 transition-colors duration-300" onclick="toggleCollapse('promo-panel', 'promo-arrow')">
+                    <span class="mr-2">Detalles desplegables</span>
+                    <svg id="promo-arrow" class="w-5 h-5 arrow-icon" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                    </svg>
+                </button>
+                <div id="promo-panel" class="collapse-panel mt-4 text-left w-full text-gray-600">
+                    <ul class="list-disc list-inside mt-2 text-sm text-gray-600">
+                        <li>La idea es que te facilitemos la posibilidad de compartir de manera efectiva y rapida con una estrategia pensada en agregarle valor a tu idea o emprendimiento.</li>
+                        <li>(Solo incluye visuales).</li>
+                        <li>Los 3 serán compartidos en nuestras redes sociales en una publicacion unica como agradecimiento dandote una difusion minima.</li>
                     </ul>
                 </div>
                 <div class="mt-6 flex flex-col items-center">
