--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <!-- Sección de Precios Individuales -->
+    <!-- Sección de Precios Individuales (Actualizada con precios base) -->
     <section class="py-16 px-4 md:px-8">
         <div class="max-w-7xl mx-auto text-center">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-8">
@@ -81,6 +81,8 @@
                     <h3 class="text-2xl font-bold text-gray-900">Flyer/Post Estático</h3>
                     <p class="mt-2 text-gray-600">Una pieza de comunicación única diseñada para destacar.</p>
                     <div class="mt-4">
+                        <!-- Precio Base: $10.000, Ahora: $7.000 -->
+                        <span class="text-sm line-through text-gray-400 mr-2">$10.000 ARS</span>
                         <span class="text-3xl font-extrabold text-purple-700">$7.000 ARS</span>
                     </div>
                 </div>
@@ -91,6 +93,8 @@
                         Storytelling (contamos tu historia con ideas) en video para captar la atención de tu audiencia.
                     </p>
                     <div class="mt-4">
+                        <!-- Precio Base: $15.000, Ahora: $10.000 -->
+                        <span class="text-sm line-through text-gray-400 mr-2">$15.000 ARS</span>
                         <span class="text-3xl font-extrabold text-purple-700">$10.000 ARS</span>
                     </div>
                 </div>
@@ -101,6 +105,8 @@
                         Una serie de imágenes para informar, generar entendimiento (de horarios, plazos, etc) y valor en tu audiencia.
                     </p>
                     <div class="mt-4">
+                        <!-- Precio Base: $25.000, Ahora: $20.000 -->
+                        <span class="text-sm line-through text-gray-400 mr-2">$25.000 ARS</span>
                         <span class="text-3xl font-extrabold text-purple-700">$20.000 ARS</span>
                     </div>
                 </div>
@@ -108,7 +114,7 @@
         </div>
     </section>
 
-    <!-- Sección de la Promo de Septiembre (Actualizada) -->
+    <!-- Sección de la Promo de Septiembre (Pack Digital Único con precio base) -->
     <section class="bg-gray-200 py-16 px-4 md:px-8">
         <div class="max-w-7xl mx-auto text-center">
             <div class="card-bg-light rounded-3xl shadow-glow-purple p-8 md:p-12">
@@ -136,6 +142,8 @@
                     </ul>
                 </div>
                 <div class="mt-6 flex flex-col items-center">
+                    <!-- Precio Base: $30.000, Ahora: $15.000 -->
+                    <p class="text-xl line-through text-gray-500 mb-1">Precio sin descuento: $30.000 ARS</p>
                     <span class="text-4xl md:text-5xl font-extrabold text-purple-700">$15.000 ARS</span>
                     <a href="https://wa.me/5492617484266" target="_blank" class="mt-6 bg-purple-600 text-white font-semibold py-3 px-8 rounded-full shadow-lg hover:bg-purple-700 transition-colors duration-300">
                         ¡Adquirir la Promo!
@@ -145,7 +153,7 @@
         </div>
     </section>
 
-    <!-- Sección de Paquetes y Planes -->
+    <!-- Sección de Paquetes y Planes (Sin cambios, solo para referencia) -->
     <section class="py-16 px-4 md:px-8">
         <div class="max-w-7xl mx-auto text-center">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-8">
@@ -238,14 +246,15 @@
         </div>
     </section>
 
-    <!-- Sección de Contacto -->
+    <!-- Sección de Contacto (Actualizada con solo 2 miembros y centrada) -->
     <section class="py-16 px-4 md:px-8">
         <div class="max-w-7xl mx-auto text-center">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">¡Hablemos de tu Proyecto!</h2>
             <p class="text-lg text-gray-600 mb-12">
                 Conoce a nuestro equipo y encontrá el mejor contacto para tu región.
             </p>
-            <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+            <!-- Grid de dos columnas para los contactos, centrada -->
+            <div class="grid gap-6 sm:grid-cols-2 max-w-lg mx-auto">
                 <!-- Botón de Matías -->
                 <a href="https://wa.me/5492617484266" target="_blank" class="bg-purple-600 hover:bg-purple-700 text-white font-semibold py-4 px-6 rounded-xl shadow-lg transition-colors duration-300 transform hover:-translate-y-1">
                     <h3 class="text-xl font-bold">Matías</h3>
@@ -257,8 +266,6 @@
                     <h3 class="text-xl font-bold">Mar</h3>
                     <p class="text-sm mt-1 opacity-80">Estrategia & Difusión (Mendoza)</p>
                     <p class="text-sm mt-2 font-light">2612794015</p>
-                </a>
-              
                 </a>
             </div>
         </div>
@@ -346,4 +353,3 @@
     </script>
 </body>
 </html>
-
