--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@
     <!-- Hero Section -->
     <section class="py-16 sm:py-24 text-center bg-pixel-dark">
         <div class="max-w-4xl mx-auto px-4">
-            <!-- Texto temático "Brotan tus ventas" -->
             <h2 class="text-4xl sm:text-6xl font-extrabold leading-tight mb-4 text-pixel-light">
                 <span class="text-pixel-accent">Diseño con Propósito.</span> Brotan tus ventas.
             </h2>
             <p class="text-xl text-pixel-secondary mb-8 sm:mb-10">
-                Somos Pixel Creativo. Llegó el verano y otoño lo sabe. Potenciamos tu contenido con nuestra exclusiva Difusión Viral Estratégica.
+                Somos Pixel Creativo. Potenciamos tu contenido con nuestra exclusiva **Difusión Viral Estratégica** para un crecimiento sostenido.
             </p>
             <a href="#paquetes" class="inline-block bg-pixel-accent text-pixel-dark px-10 py-4 rounded-full font-extrabold text-lg shadow-xl hover:shadow-2xl hover:bg-sky-400 transform hover:scale-105 transition duration-300 ease-in-out">
-                ¡Solicitar Asesoría!
+                ¡Conoce los Packs Estratégicos!
             </a>
         </div>
     </section>
@@ -80,7 +79,7 @@
                 <!-- Servicio: Flyer (Pieza Estática) Opción con Publicidad -->
                 <div class="bg-pixel-secondary/20 p-6 rounded-xl shadow-lg border border-pixel-secondary/30 hover:border-pixel-accent transition duration-300">
                     <div class="text-3xl font-bold text-pixel-accent mb-2">Flyer + Viral</div>
-                    <p class="text-pixel-light/80 mb-4">Flyer digital listo para compartir o imprimir, impulsado con nuestra difusión viral.</p>
+                    <p class="text-pixel-light/80 mb-4">Flyer digital listo para publicar, impulsado con difusión viral por una semana.</p>
                     <div class="text-4xl font-extrabold mb-6 text-pixel-light">ARS$ 10.000</div>
                     <ul class="space-y-3 text-sm text-pixel-light">
                         <li class="flex items-center">
@@ -100,7 +99,7 @@
                  <!-- Servicio: Flyer (Pieza Estática) Opción sin Publicidad -->
                  <div class="bg-pixel-secondary/20 p-6 rounded-xl shadow-lg border border-pixel-secondary/30 hover:border-pixel-accent transition duration-300">
                     <div class="text-3xl font-bold text-pixel-accent mb-2">Flyer Solo</div>
-                    <p class="text-pixel-light/80 mb-4">Flyer digital listo para compartir o imprimir. Publicado solo en redes de Pixel Creativo.</p>
+                    <p class="text-pixel-light/80 mb-4">Pieza estática optimizada y lista para su uso inmediato.</p>
                     <div class="text-4xl font-extrabold mb-6 text-pixel-light">ARS$ 7.000</div>
                     <ul class="space-y-3 text-sm text-pixel-light">
                         <li class="flex items-center">
@@ -109,10 +108,10 @@
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Sin publicidad viral externa.
+                            Entrega "Listo para Publicar".
                         </li>
                         <li class="flex items-center text-xs text-pixel-secondary">
-                            Publicación en redes de Pixel.
+                            Sin publicidad viral externa.
                         </li>
                     </ul>
                 </div>
@@ -132,7 +131,7 @@
                         </li>
                     </ul>
                     <p class="mt-4 text-xs text-pixel-accent font-semibold">
-                        Difusión Viral (10 personas/día): Presupuestada con costos aparte.
+                        La Difusión Viral se cotiza aparte para estas piezas.
                     </p>
                 </div>
             </div>
@@ -142,82 +141,67 @@
     <!-- Pricing Section (Packs Mensuales) -->
     <section id="paquetes" class="py-16 sm:py-20 bg-pixel-light text-pixel-dark">
         <div class="max-w-6xl mx-auto px-4">
-            <h3 class="text-3xl font-bold mb-10 pl-4 section-heading border-pixel-dark">Packs Mensuales: Tu aliado estratégico para el despegue</h3>
-            <p class="text-xl mb-12 max-w-3xl">Planes diseñados para la constancia y el crecimiento. El Plan Digital incluye la Difusión Viral Estratégica.</p>
+            <h3 class="text-3xl font-bold mb-10 pl-4 section-heading border-pixel-dark">Packs Mensuales de Crecimiento Estratégico</h3>
+            <p class="text-xl mb-12 max-w-3xl">Planes diseñados para alcanzar un público objetivo altamente considerable y maximizar tu presencia digital. **El Plan Básico se ofrece al contactar.**</p>
 
-            <div class="grid md:grid-cols-3 gap-8">
+            <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
 
-                <!-- Plan 1: Digital Inicial (Pack Digital Mensual - Oct 2025) -->
+                <!-- Plan 1: Avanzado (Contenido: 12 diseños + 1 Reel/sem) -->
                 <div class="bg-white p-8 rounded-xl shadow-2xl border-4 border-gray-100 flex flex-col hover:shadow-pixel-accent/50 transition duration-300">
-                    <span class="text-sm font-semibold text-gray-500 uppercase mb-2">Paso 1</span>
-                    <h4 class="text-3xl font-bold mb-4">Pack Digital</h4>
-                    <p class="text-gray-600 mb-6 flex-grow">El impulso inicial para una presencia visual profesional con difusión garantizada.</p>
-                    <div class="text-5xl font-extrabold mb-6 text-pixel-dark">ARS$ 15.000 <span class="text-xl font-normal text-gray-500">/ mes</span></div>
-                    <ul class="space-y-3 text-sm text-gray-700 mb-8">
-                        <li class="flex items-center">
-                            <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            3 Flyers listos para publicar.
-                        </li>
-                        <li class="flex items-center">
-                            <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Incluye Difusión Viral Estándar.
-                        </li>
-                        <li class="flex items-center">
-                            <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Alcance de 10 personas/día por pieza.
-                        </li>
-                    </ul>
-                    <a href="#contacto" class="w-full text-center bg-pixel-dark text-pixel-light px-6 py-3 rounded-full font-bold hover:bg-pixel-secondary transition duration-200">Empezar Ahora</a>
-                </div>
-
-                <!-- Plan 2: Avanzado (Paquete AVANZADO) -->
-                <div class="bg-white p-8 rounded-xl shadow-2xl border-4 border-pixel-accent flex flex-col transform scale-105 z-10 hover:shadow-2xl transition duration-300">
-                    <span class="text-sm font-semibold text-pixel-accent uppercase mb-2">Máximo Impacto</span>
-                    <h4 class="text-3xl font-bold mb-4 text-pixel-accent">Paquete AVANZADO</h4>
-                    <p class="text-gray-600 mb-6 flex-grow">Contenido masivo y difusión intensiva para un crecimiento rápido y medible.</p>
+                    <span class="text-sm font-semibold text-gray-500 uppercase mb-2">Crecimiento Sostenido</span>
+                    <h4 class="text-3xl font-bold mb-4">Paquete AVANZADO</h4>
+                    <p class="text-gray-600 mb-6 flex-grow">Contenido mixto de alta calidad con difusión masiva para impulsar tus ventas.</p>
                     <div class="text-5xl font-extrabold mb-6 text-pixel-dark">ARS$ 140.000 <span class="text-xl font-normal text-gray-500">/ mes</span></div>
                     <ul class="space-y-3 text-sm text-gray-700 mb-8">
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            20 piezas de contenido estáticas.
+                            **12** diseños de contenido estático al mes.
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            4 Videos Reels mensuales.
+                            **1** Video Reel por semana (4 a 5 por mes).
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Difusión Alta (1500 a 2000 personas/mes por pieza).
+                            Difusión Viral de **500 a 1.000 personas** por pieza.
                         </li>
                     </ul>
-                    <a href="#contacto" class="w-full text-center bg-pixel-accent text-pixel-dark px-6 py-3 rounded-full font-bold hover:bg-sky-400 transition duration-200">Elegir Plan Avanzado</a>
+                    <a href="#contacto" class="w-full text-center bg-pixel-dark text-pixel-light px-6 py-3 rounded-full font-bold hover:bg-pixel-secondary transition duration-200">Elegir Plan Avanzado</a>
                 </div>
 
-                <!-- Plan 3: Premium (Paquete PREMIUM) -->
-                <div class="bg-white p-8 rounded-xl shadow-2xl border-4 border-gray-100 flex flex-col hover:shadow-pixel-accent/50 transition duration-300">
-                    <span class="text-sm font-semibold text-gray-500 uppercase mb-2">Experiencia Definitiva</span>
-                    <h4 class="text-3xl font-bold mb-4">Paquete PREMIUM</h4>
-                    <p class="text-gray-600 mb-6 flex-grow">La gestión total. Diseño, publicación y Community Manager incluidos.</p>
-                    <div class="text-5xl font-extrabold mb-6 text-pixel-dark">ARS$ 175.000 <span class="text-xl font-normal text-gray-500">/ mes</span></div>
+                <!-- Plan 2: Premium (Contenido: 24 diseños + 1 Reel/sem | Precio: 250.000) -->
+                <div class="bg-white p-8 rounded-xl shadow-2xl border-4 border-pixel-accent flex flex-col transform scale-105 z-10 hover:shadow-2xl transition duration-300">
+                    <span class="text-sm font-semibold text-pixel-accent uppercase mb-2">Máximo Liderazgo</span>
+                    <h4 class="text-3xl font-bold mb-4 text-pixel-accent">Paquete PREMIUM</h4>
+                    <p class="text-gray-600 mb-6 flex-grow">Gestión total, piezas ilimitadas, soporte de CM y acceso a Facebook ADS.</p>
+                    <div class="text-5xl font-extrabold mb-6 text-pixel-dark">ARS$ 250.000 <span class="text-xl font-normal text-gray-500">/ mes</span></div>
                     <ul class="space-y-3 text-sm text-gray-700 mb-8">
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Servicio de Community Manager completo.
+                            **24** diseños (estáticos) + **1 Reel** por semana.
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Piezas de contenido ilimitadas.
+                            Difusión Viral de **500 a 1.000 personas** por pieza.
                         </li>
-                        <li class="flex items-center">
+                        <li class="flex items-center text-sm text-gray-700">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Difusión Máxima Estratégica (Metas de leads garantizadas).
+                            **Community Manager** incluido.
+                        </li>
+                        <li class="flex items-center text-sm text-gray-700">
+                            <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
+                            Mantenimiento Web (Landing Page gratuita).
+                        </li>
+                        <li class="flex items-center text-xs text-gray-600">
+                            <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
+                            Apoyo en **Facebook ADS** (15% cada ARS$ 15.000).
                         </li>
                     </ul>
-                    <a href="#contacto" class="w-full text-center bg-pixel-dark text-pixel-light px-6 py-3 rounded-full font-bold hover:bg-pixel-secondary transition duration-200">Solicitar Presupuesto</a>
+                    <a href="#contacto" class="w-full text-center bg-pixel-accent text-pixel-dark px-6 py-3 rounded-full font-bold hover:bg-sky-400 transition duration-200">Solicitar Presupuesto</a>
                 </div>
 
             </div>
-            <p class="text-center text-sm text-gray-500 mt-10">Todos los precios están expresados en Pesos Argentinos (ARS) y son válidos para el período de Octubre 2025.</p>
+            <p class="text-center text-sm text-gray-500 mt-10">Para consultar por nuestro **Paquete BÁSICO Semanal o Mensual** (Opción flexible de inicio), por favor, contáctanos directamente.</p>
         </div>
     </section>
 
@@ -225,24 +209,24 @@
     <section class="py-16 sm:py-20 bg-pixel-secondary/20">
         <div class="max-w-6xl mx-auto px-4">
             <h3 class="text-3xl font-bold mb-4 text-center section-heading inline-block px-2 text-pixel-accent">La Difusión Viral Estratégica</h3>
-            <p class="text-xl text-center text-pixel-light/80 max-w-3xl mx-auto mb-8">El motor que hace brotar tus ventas post-primavera, generando un crecimiento considerable.</p>
+            <p class="text-xl text-center text-pixel-light/80 max-w-3xl mx-auto mb-8">El motor que genera un crecimiento considerable de tu público objetivo a largo plazo.</p>
 
             <div class="grid md:grid-cols-3 gap-8 text-center">
                 <div class="p-6 rounded-xl bg-pixel-dark/50 shadow-md">
                     <div class="text-5xl mb-3 text-pixel-accent">🚀</div>
-                    <h4 class="font-bold text-lg mb-2">Impulso Inicial</h4>
-                    <p class="text-sm text-pixel-light/70">Garantizamos un alcance mínimo para que tu contenido no nazca en el vacío. 5 publicaciones diarias estratégicas por una semana.</p>
+                    <h4 class="font-bold text-lg mb-2">Alto Alcance</h4>
+                    <p class="text-sm text-pixel-light/70">Potenciamos el contenido a través de nuestros propios canales de WhatsApp y grupos de Facebook con fuerte presencia en Mendoza y San Juan.</p>
                 </div>
                 <div class="p-6 rounded-xl bg-pixel-dark/50 shadow-md">
                     <div class="text-5xl mb-3 text-pixel-accent">🌱</div>
                     <h4 class="font-bold text-lg mb-2">Crecimiento Pasivo</h4>
-                    <p class="text-sm text-pixel-light/70">Dejamos las publicaciones activas para que sigan corriendo de manera pasiva y orgánica, generando crecimiento a largo plazo.</p>
+                    <p class="text-sm text-pixel-light/70">Dejamos las publicaciones activas para que sigan generando crecimiento pasivo y orgánico a través de nuestros canales.</p>
                 </div>
                 <div class="p-6 rounded-xl bg-pixel-dark/50 shadow-md">
                     <div class="text-5xl mb-3 text-pixel-accent">👁️</div>
-                    <h4 class="font-bold text-lg mb-2">Enfoque en Alcance</h4>
+                    <h4 class="font-bold text-lg mb-2">Enfoque en Visibilidad</h4>
                     <p class="text-xs text-pixel-accent font-semibold">Aclaración:</p>
-                    <p class="text-xs text-pixel-light/70">La difusión garantiza **visualización o alcance**, no incluye clicks, ventas, prospectaje u otro tipo de contacto directo.</p>
+                    <p class="text-xs text-pixel-light/70">La difusión garantiza **visualización o alcance**, no incluye clics, ventas ni prospectaje. Es un crecimiento en la base del público objetivo.</p>
                 </div>
             </div>
         </div>
