--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <span class="text-pixel-accent">Diseño con Propósito.</span> Brotan tus ventas.
             </h2>
             <p class="text-xl text-pixel-secondary mb-8 sm:mb-10">
-                Somos Pixel Creativo. Potenciamos tu contenido con nuestra exclusiva **Difusión Viral Estratégica** para un crecimiento sostenido.
+                Somos Pixel Creativo. Potenciamos tu contenido con nuestra exclusiva Difusión Viral Estratégica para un crecimiento sostenido.
             </p>
             <a href="#paquetes" class="inline-block bg-pixel-accent text-pixel-dark px-10 py-4 rounded-full font-extrabold text-lg shadow-xl hover:shadow-2xl hover:bg-sky-400 transform hover:scale-105 transition duration-300 ease-in-out">
                 ¡Conoce los Packs Estratégicos!
@@ -80,7 +80,9 @@
                 <div class="bg-pixel-secondary/20 p-6 rounded-xl shadow-lg border border-pixel-secondary/30 hover:border-pixel-accent transition duration-300">
                     <div class="text-3xl font-bold text-pixel-accent mb-2">Flyer + Viral</div>
                     <p class="text-pixel-light/80 mb-4">Flyer digital listo para publicar, impulsado con difusión viral por una semana.</p>
-                    <div class="text-4xl font-extrabold mb-6 text-pixel-light">ARS$ 10.000</div>
+                    <div class="text-4xl font-extrabold mb-6 text-pixel-light">
+                        <span class="text-4xl font-extrabold">10.000</span> ARS
+                    </div>
                     <ul class="space-y-3 text-sm text-pixel-light">
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
@@ -100,7 +102,9 @@
                  <div class="bg-pixel-secondary/20 p-6 rounded-xl shadow-lg border border-pixel-secondary/30 hover:border-pixel-accent transition duration-300">
                     <div class="text-3xl font-bold text-pixel-accent mb-2">Flyer Solo</div>
                     <p class="text-pixel-light/80 mb-4">Pieza estática optimizada y lista para su uso inmediato.</p>
-                    <div class="text-4xl font-extrabold mb-6 text-pixel-light">ARS$ 7.000</div>
+                    <div class="text-4xl font-extrabold mb-6 text-pixel-light">
+                        <span class="text-4xl font-extrabold">7.000</span> ARS
+                    </div>
                     <ul class="space-y-3 text-sm text-pixel-light">
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
@@ -123,11 +127,11 @@
                     <ul class="space-y-3 text-sm text-pixel-light mb-4">
                         <li class="flex justify-between items-center border-b border-pixel-secondary/50 pb-1">
                             <span>Reel Narrativa Visual</span>
-                            <span class="font-extrabold text-pixel-light">ARS$ 15.000</span>
+                            <span class="font-extrabold text-pixel-light"><span class="font-extrabold">15.000</span> ARS</span>
                         </li>
                         <li class="flex justify-between items-center">
                             <span>Carrusel (hasta 5 piezas)</span>
-                            <span class="font-extrabold text-pixel-light">ARS$ 25.000</span>
+                            <span class="font-extrabold text-pixel-light"><span class="font-extrabold">25.000</span> ARS</span>
                         </li>
                     </ul>
                     <p class="mt-4 text-xs text-pixel-accent font-semibold">
@@ -167,7 +171,9 @@
                         <!-- Opción Semanal -->
                         <div class="p-4 bg-pixel-secondary/20 rounded-lg text-pixel-dark border border-gray-300">
                             <h5 class="text-lg font-bold text-pixel-dark">Opción Semanal</h5>
-                            <div class="text-3xl font-extrabold my-2 text-pixel-dark">ARS$ 20.000 <span class="text-sm font-normal text-gray-700">/ semana</span></div>
+                            <div class="text-3xl font-extrabold my-2 text-pixel-dark">
+                                <span class="font-extrabold">20.000</span> ARS <span class="text-sm font-normal text-gray-700">/ semana</span>
+                            </div>
                             <p class="text-xs text-gray-700 font-semibold mb-2">Contenido:</p>
                             <ul class="text-sm text-gray-700 list-disc list-inside space-y-1">
                                 <li>5 piezas para publicar (días hábiles).</li>
@@ -176,13 +182,15 @@
                             </ul>
                         </div>
 
-                        <!-- Opción Mensual -->
+                        <!-- Opción Mensual (Precio Corregido a 100.000 ARS) -->
                         <div class="p-4 bg-pixel-secondary/20 rounded-lg text-pixel-dark border border-gray-300">
                             <h5 class="text-lg font-bold text-pixel-dark">Opción Mensual</h5>
-                            <div class="text-3xl font-extrabold my-2 text-pixel-dark">ARS$ 150.000 <span class="text-sm font-normal text-gray-700">/ mes</span></div>
+                            <div class="text-3xl font-extrabold my-2 text-pixel-dark">
+                                <span class="font-extrabold">100.000</span> ARS <span class="text-sm font-normal text-gray-700">/ mes</span>
+                            </div>
                             <p class="text-xs text-gray-700 font-semibold mb-2">Contenido:</p>
                             <ul class="text-sm text-gray-700 list-disc list-inside space-y-1">
-                                <li>12 diseños para publicar durante el mes contratado.</li>
+                                <li>12 diseños para publicar durante todo el mes.</li>
                                 <li>Difusión viral: Alcance de 100 a 300 personas (solo visibilidad).</li>
                             </ul>
                         </div>
@@ -194,7 +202,9 @@
                     <span class="text-sm font-semibold text-gray-500 uppercase mb-2">Crecimiento Sostenido</span>
                     <h4 class="text-3xl font-bold mb-4">Paquete AVANZADO</h4>
                     <p class="text-gray-600 mb-6 flex-grow">Contenido mixto y difusión masiva para impulsar tus ventas.</p>
-                    <div class="text-5xl font-extrabold mb-6 text-pixel-dark">ARS$ 140.000 <span class="text-xl font-normal text-gray-500">/ mes</span></div>
+                    <div class="text-5xl font-extrabold mb-6 text-pixel-dark">
+                        <span class="font-extrabold">140.000</span> ARS <span class="text-xl font-normal text-gray-500">/ mes</span>
+                    </div>
                     <ul class="space-y-3 text-sm text-gray-700 mb-8">
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
@@ -217,7 +227,9 @@
                     <span class="text-sm font-semibold text-pixel-accent uppercase mb-2">Máximo Liderazgo</span>
                     <h4 class="text-3xl font-bold mb-4 text-pixel-accent">Paquete PREMIUM</h4>
                     <p class="text-gray-600 mb-6 flex-grow">Gestión total, alta difusión, soporte CM y apoyo en Facebook ADS.</p>
-                    <div class="text-5xl font-extrabold mb-6 text-pixel-dark">ARS$ 250.000 <span class="text-xl font-normal text-gray-500">/ mes</span></div>
+                    <div class="text-5xl font-extrabold mb-6 text-pixel-dark">
+                        <span class="font-extrabold">250.000</span> ARS <span class="text-xl font-normal text-gray-500">/ mes</span>
+                    </div>
                     <ul class="space-y-3 text-sm text-gray-700 mb-8">
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
@@ -237,7 +249,7 @@
                         </li>
                         <li class="flex items-center text-xs text-gray-600">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Apoyo en Facebook ADS (15% cada ARS$ 15.000).
+                            Apoyo en Facebook ADS (15% cada <span class="font-bold">15.000</span> ARS).
                         </li>
                     </ul>
                     <a href="#contacto" class="w-full text-center bg-pixel-accent text-pixel-dark px-6 py-3 rounded-full font-bold hover:bg-sky-400 transition duration-200">Solicitar Presupuesto</a>
@@ -269,7 +281,7 @@
                     <div class="text-5xl mb-3 text-pixel-accent">👁️</div>
                     <h4 class="font-bold text-lg mb-2">Enfoque en Visibilidad</h4>
                     <p class="text-xs text-pixel-accent font-semibold">Aclaración:</p>
-                    <p class="text-xs text-pixel-light/70">La difusión garantiza **visualización o alcance**, no incluye clics, ventas ni prospectaje. Es un crecimiento en la base del público objetivo.</p>
+                    <p class="text-xs text-pixel-light/70">La difusión garantiza visualización o alcance, no incluye clics, ventas ni prospectaje. Es un crecimiento en la base del público objetivo.</p>
                 </div>
             </div>
         </div>
@@ -304,20 +316,22 @@
 
     <!-- Script para el Acordeón -->
     <script>
+        // Función para manejar el acordeón
         function toggleAccordion(id) {
             const details = document.getElementById(id);
-            const button = document.getElementById(id.replace('-details', '-icon'));
+            const icon = document.getElementById(id.replace('-details', '-icon'));
+            const isVisible = details.style.maxHeight && details.style.maxHeight !== '0px';
 
-            if (details.style.maxHeight) {
+            if (isVisible) {
                 // Si está abierto, cerrarlo
                 details.style.maxHeight = null;
-                details.classList.remove('p-4'); // Quitar padding para que el cierre sea limpio
-                if (button) button.classList.remove('rotate-180');
+                details.classList.remove('py-4', 'px-4'); // Quitar padding para un cierre limpio
+                if (icon) icon.classList.remove('rotate-180');
             } else {
                 // Si está cerrado, abrirlo
+                details.classList.add('py-4', 'px-4'); // Añadir padding al abrir
                 details.style.maxHeight = details.scrollHeight + "px";
-                details.classList.add('p-4'); // Añadir padding al abrir
-                if (button) button.classList.add('rotate-180');
+                if (icon) icon.classList.add('rotate-180');
             }
         }
 
@@ -327,7 +341,7 @@
             if (details) {
                  // Establecer la altura máxima a 0 y quitar padding al cargar para que empiece cerrado
                 details.style.maxHeight = '0';
-                details.classList.remove('p-4'); 
+                details.classList.remove('py-4', 'px-4'); 
             }
         });
     </script>
