--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                             <ul class="text-sm text-gray-700 list-disc list-inside space-y-1">
                                 <li>5 piezas para publicar (días hábiles).</li>
                                 <li>Linktree incluido.</li>
-                                <li>Difusión viral: Alcance de **50 a 100 personas por semana**.</li>
-                                <li>**Beneficio Extra:** 1 semana de actividad estratégica adicional al no renovar.</li>
+                                <li>Difusión viral: Alcance de 50 a 100 personas (por semana).</li>
+                                <li>Beneficio Extra: 1 semana de actividad estratégica adicional al no renovar.</li>
                             </ul>
                         </div>
 
@@ -185,7 +185,7 @@
                             <ul class="text-sm text-gray-700 list-disc list-inside space-y-1">
                                 <li>8 diseños para publicar durante todo el mes.</li>
                                 <li>Linktree incluido.</li>
-                                <li>Difusión viral: Alcance de **100 a 300 personas por mes**.</li>
+                                <li>Difusión viral: Alcance de 100 a 300 personas por mes.</li>
                                 <li>Objetivo: Triplicar el alcance con difusión.</li>
                             </ul>
                         </div>
@@ -206,11 +206,11 @@
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            1 Video **Reel por semana**.
+                            1 Video Reel por semana.
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Difusión Viral de **500 a 1.000 personas por pieza**.
+                            Difusión Viral de 500 a 1.000 personas por pieza.
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
@@ -230,11 +230,11 @@
                     <ul class="space-y-3 text-sm text-gray-700 mb-8">
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            **24 diseños** (estáticos) + **1 Reel por semana**.
+                            24 diseños (estáticos) + 1 Reel por semana.
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Difusión Viral de **500 a 1.000 personas por pieza**.
+                            Difusión Viral de 500 a 1.000 personas por mes.
                         </li>
                         <li class="flex items-center text-sm text-gray-700">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
@@ -246,14 +246,14 @@
                         </li>
                         <li class="flex items-center text-xs text-gray-600">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Apoyo en Facebook ADS: cubrimos un **15% del costo cada $15.000 ARS** invertidos.
+                            Apoyo en Facebook ADS: cubrimos un 15% del costo cada $15.000 ARS invertidos.
                         </li>
                     </ul>
                     <a href="#contacto" class="w-full text-center bg-pixel-accent text-pixel-dark px-6 py-3 rounded-full font-bold hover:bg-sky-400 transition duration-200">Solicitar Presupuesto</a>
                 </div>
 
             </div>
-            <p class="text-center text-sm text-gray-500 mt-10">Todos los precios están expresados en Pesos Argentinos (ARS) y son válidos durante **Octubre de 2025**.</p>
+            <p class="text-center text-sm text-gray-500 mt-10">Todos los precios están expresados en Pesos Argentinos (ARS) y son válidos durante Octubre de 2025.</p>
         </div>
     </section>
 
@@ -261,7 +261,7 @@
         <div class="max-w-6xl mx-auto px-4">
             <h3 class="text-3xl font-bold mb-4 text-center section-heading inline-block px-2 text-pixel-accent">La Difusión Viral Estratégica</h3>
             <p class="text-xl text-center text-pixel-light/80 max-w-3xl mx-auto mb-8">
-                Es la publicación estratégica de tu contenido en nuestros canales y grupos de alta presencia, dirigida a la **región y público objetivo correcto**. Estrategias certeras y probadas con **evidencias empíricas**.
+                Es la publicación estratégica de tu contenido en nuestros canales y grupos de alta presencia, dirigida a la región y público objetivo correcto. Estrategias certeras y probadas con **evidencias empíricas**.
             </p>
 
             <div class="grid md:grid-cols-3 gap-8 text-center">
@@ -279,7 +279,7 @@
                     <div class="text-5xl mb-3 text-pixel-accent">👁️</div>
                     <h4 class="font-bold text-lg mb-2">Enfoque en Visibilidad</h4>
                     <p class="text-xs text-pixel-accent font-semibold">Aclaración Importante:</p>
-                    <p class="text-xs text-pixel-light/70">La difusión garantiza **visibilidad** o **alcance** exclusivamente. No incluye clics, ventas, prospectaje ni otro tipo de contacto directo.</p>
+                    <p class="text-xs text-pixel-light/70">La difusión garantiza visibilidad o alcance exclusivamente. No incluye clics, ventas, prospectaje ni otro tipo de contacto directo.</p>
                 </div>
             </div>
         </div>
@@ -345,3 +345,4 @@
     </script>
 </body>
 </html>
+
