--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <section id="servicios" class="py-16 sm:py-20 bg-pixel-dark">
         <div class="max-w-6xl mx-auto px-4">
-            <h3 class="text-3xl font-bold mb-10 pl-4 section-heading">Piezas Individuales (Tarifas Base Fijas)</h3>
+            <h3 class="text-3xl font-bold mb-10 pl-4 section-heading">Piezas Individuales (Precio Unitario)</h3>
              
             <div class="grid md:grid-cols-3 gap-8">
                  
@@ -93,7 +93,7 @@
                             1 semana de Publicidad Viral (10 personas/día).
                         </li>
                         <li class="flex items-center text-xs text-pixel-secondary">
-                            Difusión **Incluida**.
+                            Difusión Incluida: Ideal para eventos.
                         </li>
                     </ul>
                 </div>
@@ -111,10 +111,10 @@
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Entrega "Listo para Publicar".
+                            Entrega: Listo para Publicar.
                         </li>
                         <li class="flex items-center text-xs text-pixel-secondary">
-                            Difusión **No Incluida**.
+                            Difusión No Incluida.
                         </li>
                     </ul>
                 </div>
@@ -261,14 +261,14 @@
         <div class="max-w-6xl mx-auto px-4">
             <h3 class="text-3xl font-bold mb-4 text-center section-heading inline-block px-2 text-pixel-accent">La Difusión Viral Estratégica</h3>
             <p class="text-xl text-center text-pixel-light/80 max-w-3xl mx-auto mb-8">
-                Es la publicación estratégica de tu contenido en nuestros canales y grupos de alta presencia, dirigida a la región y público objetivo correcto. Estrategias certeras y probadas con **evidencias empíricas**.
+                Es la publicación estratégica de tu contenido en nuestros canales y grupos de alta presencia, dirigida a la región y público objetivo correcto. Estrategias certeras y probadas con evidencias empíricas (te mostramos los resultados de otras campañas).
             </p>
 
             <div class="grid md:grid-cols-3 gap-8 text-center">
                 <div class="p-6 rounded-xl bg-pixel-dark/50 shadow-md">
                     <div class="text-5xl mb-3 text-pixel-accent">🚀</div>
                     <h4 class="font-bold text-lg mb-2">Alto Alcance</h4>
-                    <p class="text-sm text-pixel-light/70">Potenciamos el contenido a través de nuestros propios canales de WhatsApp y grupos de Facebook con fuerte presencia en Mendoza y San Juan.</p>
+                    <p class="text-sm text-pixel-light/70">Si bien nuestra misión actual es aportar valor a los emprendimientos mendocinos podemos ayudarte seas de donde seas. Potenciamos el contenido a través de nuestros propios canales de WhatsApp y grupos de Facebook con fuerte presencia en donde lo necesites.</p>
                 </div>
                 <div class="p-6 rounded-xl bg-pixel-dark/50 shadow-md">
                     <div class="text-5xl mb-3 text-pixel-accent">🌱</div>
@@ -345,4 +345,5 @@
     </script>
 </body>
 </html>
+
 
