--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <ul class="text-sm text-gray-700 list-disc list-inside space-y-1">
                                 <li>8 diseños para publicar durante todo el mes.</li>
                                 <li>Linktree incluido.</li>
-                                <li>Difusión viral: Alcance de 100 a 300 personas por mes.</li>
+                                <li>Difusión viral: Alcance de 300 a 500 personas por mes.</li>
                                 <li>Objetivo: Triplicar el alcance con difusión.</li>
                             </ul>
                         </div>
@@ -210,11 +210,11 @@
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Difusión Viral de 500 a 1.000 personas por pieza.
+                            Difusión Viral de 700 a 2.000 personas por més.
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Linktree + Crecimiento pasivo de seguidores.
+                            Linktree + Crecimiento pasivo de seguidores (no aseguramos una cifra especifica).
                         </li>
                     </ul>
                     <a href="#contacto" class="w-full text-center bg-pixel-dark text-pixel-light px-6 py-3 rounded-full font-bold hover:bg-pixel-secondary transition duration-200">Elegir Plan Avanzado</a>
@@ -234,7 +234,7 @@
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Difusión Viral de 500 a 1.000 personas por mes.
+                            Difusión Viral de 500 a 2.000 personas por mes.
                         </li>
                         <li class="flex items-center text-sm text-gray-700">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
@@ -242,11 +242,11 @@
                         </li>
                         <li class="flex items-center text-sm text-gray-700">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Mantenimiento Web (Landing Page gratuita).
+                            Mantenimiento Web + Landing Page (gratuita).
                         </li>
                         <li class="flex items-center text-xs text-gray-600">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            Apoyo en Facebook ADS: cubrimos un 15% del costo cada $15.000 ARS invertidos.
+                            Opcional: Apoyo en Facebook ADS: cubrimos un 15% del costo cada $15.000 ARS invertidos.
                         </li>
                     </ul>
                     <a href="#contacto" class="w-full text-center bg-pixel-accent text-pixel-dark px-6 py-3 rounded-full font-bold hover:bg-sky-400 transition duration-200">Solicitar Presupuesto</a>
@@ -345,5 +345,6 @@
     </script>
 </body>
 </html>
+
 
 
